RESOLVED FIXED104549
REGRESSION(137127): Causes assertion failures on the debug bots
https://bugs.webkit.org/show_bug.cgi?id=104549
Summary REGRESSION(137127): Causes assertion failures on the debug bots
Martin Robinson
Reported 2012-12-10 06:38:03 PST
There's a missing return statement in TextInvocation.cpp.
Attachments
Patch (1.53 KB, patch)
2012-12-10 06:41 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-12-10 06:41:20 PST
WebKit Review Bot
Comment 2 2012-12-10 07:12:51 PST
Comment on attachment 178536 [details] Patch Clearing flags on attachment: 178536 Committed r137151: <http://trac.webkit.org/changeset/137151>
WebKit Review Bot
Comment 3 2012-12-10 07:12:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.