REGRESSION(137127): Causes assertion failures on the debug bots https://bugs.webkit.org/show_bug.cgi?id=104549

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-12-10
Reviewed by Alejandro G. Castro.

After handling the new TextOutput message we should return the method
handling messages received.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle): Fix a missing early return.

Canonical link: https://commits.webkit.org/122710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137151 268f45cc-cd09-0410-ab3c-d52691b4dbfc